--- a/backend-api/package.json
+++ b/backend-api/package.json
@@ -13,6 +13,8 @@
   "description": "anh minh",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
     "express": "^4.21.1"
   },
   "devDependencies": {
