--- a/backend-api/package.json
+++ b/backend-api/package.json
@@ -15,7 +15,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "mysql2": "^3.11.4"
   },
   "devDependencies": {
     "nodemon": "3.1.7"
